[Feat] Review Layout 구성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">DesignClient_OliveYoung</string>
+    <string name="txt_review">
+        토너패드 유목민인데 무난템으로 좋은거 같아요\n\n
+        다른 광고에서 남은 에센스가 엄청 많이 찰랑거려서 어?나는그정도는 아닌데 싶었는데.패드 한장딱 꺼내보니까 왜인지 알겠더라구요.\n
+        패드가 굉장히 도톰해서 에센스를 한가득 머금고 있고 있어서 그렇더라구요, 다른 패드에비해서는 확실히 에센스가 많은건 맞는거 같아요\n\n
+        그리고 패드사이즈가 왕커서 팩으로 사용하기에도 좋고 패드가 두꺼워서 금방 마르지 않아서 좋았어요\n
+        닦토로 사용하기에도 순면이라 자극적이지 않구요\n
+        아하가아니라 파하,바하가 들어있어서 순하게 모공정리와 각질정리하기에 좋습니다.\n
+        마무리감도 끈적이지 않아서 지금부터 여름까지 쭉 사용하기 좋아요\n
+        🌟 이건 팁인데요 두번째사진참고해주세요🌟\n
+        패드 뚜껑돌려서 여신다음에 동그란막하나 벗기고 씰형태로 되어있는거 다까지마시고 반만까서 딱접고 뚜껑다시 돌려서 닫으면 패드집게 보관하기 아주편리합니다\n
+    </string>
 </resources>
