OliveYoung Redesign Complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
 닦토로 사용하기에도 순면이라 자극적이지 않구요\n
 아하가아니라 파하,바하가 들어있어서 순하게 모공정리와 각질정리하기에 좋습니다.\n
 마무리감도 끈적이지 않아서 지금부터 여름까지 쭉 사용하기 좋아요\n
-🌟 이건 팁인데요 두번째사진참고해주세요🌟\n
+🌟 이건 팁인데요 두번째사진참고해주세요🌟
+
 패드 뚜껑돌려서 여신다음에 동그란막하나 벗기고 씰형태로\n
 되어있는거 다까지마시고 반만까서 딱접고 뚜껑다시 돌려서
         \n닫으면 패드집게 보관하기 아주편리합니다 \n
